--- a/core/src/main/resources/static/index.tpl.html
+++ b/core/src/main/resources/static/index.tpl.html
@@ -13,9 +13,13 @@
     <link rel="icon" type="image/png" href="image/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="image/favicon-16x16.png" sizes="16x16" />
 </head>
-<body data-ng-controller="MainCtrl">
+<body>
 
-    Hello world! {{ name }}
+    <div data-ui-view="main">
+        Hello world! {{ name }}
+
+        <div data-ui-view></div>
+    </div>
 
     <script src=min/vendor.@@hash.js></script>
     <script src=min/controllers.@@hash.js></script>
