nested views; app controller; refactor of states

--- a/core/src/main/resources/static/modules/user/login/loginView.html
+++ b/core/src/main/resources/static/modules/user/login/loginView.html
@@ -1,5 +1,11 @@
-<input type="text" data-ng-model="username" />
-<input type="text" data-ng-model="password" />
-<button data-ng-click="login()">Login</button>
-<br/>
-<button data-ng-click="goto('SIGNUP')">Signup</button>
+<div class="login-div">
+
+    <input type="text" data-ng-model="username" />
+    <input type="text" data-ng-model="password" />
+    <button data-ng-click="login()">Login</button>
+    <br/>
+    <button data-ng-click="goto('SIGNUP')">Signup</button>
+    <button data-ng-click="goto('MAIN')">Main</button>
+    <button data-ng-click="goto('DASHBOARD')">Dashboard</button>
+
+</div>
