--- a/core/src/main/resources/static/index.tpl.html
+++ b/core/src/main/resources/static/index.tpl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="ctscan">
+<html lang="en" data-ng-app="ctscan" data-ng-controller="AppCtrl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,12 +13,10 @@
     <link rel="icon" type="image/png" href="image/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="image/favicon-16x16.png" sizes="16x16" />
 </head>
-<body>
+<body class="{{ bodyClasses }} ">
 
-    <div data-ui-view="main">
-        Hello world! {{ name }}
+    <div data-ui-view>
 
-        <div data-ui-view></div>
     </div>
 
     <script src=min/vendor.@@hash.js></script>
