--- a/core/src/main/resources/static/modules/user/login/loginView.html
+++ b/core/src/main/resources/static/modules/user/login/loginView.html
@@ -6,6 +6,7 @@
                 <span class="white-text bold" data-ng-bind="'E-mail'"></span>
                 <input type="text"
                        class="form-control"
+                       data-ng-attr-placeholder="test@test.com"
                        data-ng-model="username" />
             </div>
 
@@ -13,6 +14,7 @@
                 <span class="white-text bold" data-ng-bind="'Password'"></span>
                 <input type="password"
                        class="form-control"
+                       data-ng-attr-placeholder="password"
                        data-ng-model="password" />
             </div>
 
@@ -20,6 +22,7 @@
                 <span class="white-text bold" data-ng-bind="'Re-Password'"></span>
                 <input type="password"
                        class="form-control"
+                       data-ng-attr-placeholder="re-password"
                        data-ng-model="repassword" />
             </div>
 
@@ -40,14 +43,16 @@
         </form>
 
         <div class="login-section signup-section" data-ng-show="!signupMode">
-            <a href=""><span class="bold" data-ng-bind="'You don\'t have account - sign up'" data-ng-click="setSignupMode(true)"></span></a>
+            <a href="" class="select-link">
+                <span class="bold" data-ng-bind="'You don\'t have account - sign up'" data-ng-click="setSignupMode(true)"></span>
+            </a>
         </div>
         <div class="login-section signup-section" data-ng-show="signupMode">
-            <a href=""><span class="bold" data-ng-bind="'Back to login view'" data-ng-click="setSignupMode(false)"></span></a>
+            <a href="" class="select-link">
+                <span class="bold" data-ng-bind="'Back to login view'" data-ng-click="setSignupMode(false)"></span>
+            </a>
         </div>
 
-        <button data-ng-click="goto('SIGNUP')">Signup</button>
-        <button data-ng-click="goto('MAIN')">Main</button>
-        <button data-ng-click="goto('DASHBOARD')">Dashboard</button>
+        <button type="button" data-ng-click="goto('DASHBOARD')" >dash</button>
     </div>
 </div>
