main view; first component - header; sass; font configuration

--- a/core/src/main/resources/static/modules/main/mainView.html
+++ b/core/src/main/resources/static/modules/main/mainView.html
@@ -1,4 +1,13 @@
-Hello world! {{ name }}
-<div data-ui-view>
+<header class="main-header">
+    <header-component></header-component>
+</header>
 
+<nav class="main-menu">
+
+</nav>
+
+<div class="main-body">
+    <section class="main-content">
+        <div data-ui-view></div>
+    </section>
 </div>
