menu component; enpoints - upload, add ect experiment

--- a/core/src/main/resources/static/modules/user/login/loginView.html
+++ b/core/src/main/resources/static/modules/user/login/loginView.html
@@ -47,6 +47,6 @@
             </a>
         </div>
 
-        <button type="button" data-ng-click="goto('DASHBOARD')" >dash</button>
+        <button type="button" data-ng-click="goto(states.dashboard.state)" >dash</button>
     </div>
 </div>
